# silentspeechoe

./: .gitignore  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.gpu.yml  docker-compose.yml  requirements.txt
.devcontainer/gpu/: devcontainer.json
configs/: config.yaml
configs/data/: openearable.yaml
configs/experiment/: bone_binaural_all_modes.yaml  imu_binaural_cnn_feature_subjects36_nonsemantic_all.yaml  imu_binaural_mlp_subjects36_nonsemantic_all.yaml  imu_binaural_resnet_subjects36_nonsemantic_all.yaml  imu_left_all_modes.yaml  (+18 more)
data/: README.md  instruction.txt  instruction2.txt  数据构成.txt
scripts/: add_gaussian_noise_imu_windows.py  evaluate_imu_arcface_templates.py  generate_imu_arcface_templates.py  inspect_imu.py  precompute_features.py  precompute_imu_binaural_temporal_envelope.py  precompute_imu_mfcc.py  precompute_imu_temporal_envelope.py  precompute_raw_bone.py  train.py  train_imu_mfcc.py
tests/: test_baseline.py  test_binaural_pairs.py  test_binaural_records.py  test_config_files.py  test_feature_cnn.py  test_feature_mix.py  test_feature_mlp.py  test_feature_token_transformer.py  test_imports.py  test_imu_augmentation.py  test_imu_cnn.py  test_imu_mfcc.py  test_imu_mlp.py  test_imu_preprocessing.py  test_imu_temporal_envelope.py  test_losses.py  test_lstm.py  test_metrics.py  test_precompute_imu_binaural_lrdiff_windows.py  test_precompute_imu_binaural_windows.py  test_preprocessing.py  test_project_structure.py  test_sensor_temporal_cnn.py  test_train_metrics_serialization.py  test_trainer.py
(+96 files in other folders)
