[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "silentspeechoe"
version = "0.1.0"
description = "Scaffold for earable sensor-based cross-domain silent speech recognition research."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "TODO", email = "todo@example.com"},
]
dependencies = [
  "hydra-core>=1.3,<2.0",
  "matplotlib>=3.8",
  "numpy>=1.24",
  "omegaconf>=2.3,<3.0",
  "openpyxl>=3.1",
  "pandas>=2.0",
  "PyYAML>=6.0,<7.0",
  "scikit-learn>=1.3",
  "umap-learn>=0.5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true
pretty = true
